--- a/client/src/components/unit/landing/account/index.css
+++ b/client/src/components/unit/landing/account/index.css
@@ -1,3 +1,13 @@
+@media(max-width: 420px) {
+	.modal_container>.modal, .modal>.close_btn {
+		transform: scale(0.9);
+	}
+
+	.modal>.close_btn {
+		right: calc(50% - 185px) !important;
+	}
+}
+
 .modal_container {
 	position: fixed;
 	top: 0;
@@ -16,12 +26,96 @@
 }
 
 .modal_container>.modal {
-	width: 400px;
-	height: 400px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	width: 380px;
+	height: 480px;
+	padding: 20px;
 	background-color: #fff;
+
+	-webkit-box-shadow: 0 0 8px var(--color-100);
+	box-shadow: 0 0 8px var(--color-100);
+	border-radius: 8px;
 }
 
 .modal_container.show {
 	visibility: visible;
 	opacity: 1;
+}
+
+.modal>.close_btn {
+	position: fixed;
+	top: calc(50% - 250px);
+	right: calc(50% - 200px);
+
+	width: 36px;
+	height: 36px;
+	color: var(--color-20);
+
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.modal>.close_btn:hover {
+	transform: rotate(-90deg);
+	color: var(--color-70);
+}
+
+.modal>.logo_icon {
+	width: 36px;
+	height: 36px;
+	color: var(--color-100);
+}
+
+.modal>h3 {
+	font-size: 22px;
+	font-style: italic;
+	letter-spacing: -1.2px;
+	word-spacing: 3px;
+}
+
+.modal>span {
+	margin: 4px 0;
+	width: 340px;
+	height: auto;
+
+	color: darkslategray;
+	font-size: 13.4px;
+	text-align: center;
+	letter-spacing: -0.2px;
+	word-spacing: 1.2px;
+	line-height: 18px;
+}
+
+.modal>.login_btn_container {
+	margin-top: 18px;
+}
+
+.login_btn_container>.login_btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 10px 0;
+	width: 320px;
+	height: 40px;
+
+	border-radius: 24px;
+	border: 2px solid #525964;
+
+	font-size: 14px;
+
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.login_btn_container>.login_btn:hover {
+	background-color: var(--color-10);
+}
+
+.login_btn_container>p {
+	margin-top: 10px;
+	text-align: center;
 }
