--- a/client/src/components/unit/landing/callback/index.css
+++ b/client/src/components/unit/landing/callback/index.css
@@ -1,5 +1,10 @@
 .oauth_callback_container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	width: 100%;
 	height: 100%;
+
 	background-color: var(--color-10);
 }
