--- a/client/src/components/unit/landing/index.css
+++ b/client/src/components/unit/landing/index.css
@@ -233,3 +233,14 @@
 .modal>.appstore_container>img:hover {
 	opacity: 0.6;
 }
+
+.oauth_callback_container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: var(--color-10);
+}
