--- a/client/src/components/unit/lookup/index.css
+++ b/client/src/components/unit/lookup/index.css
@@ -1,6 +1,79 @@
 .lookup_container {
+	display: flex;
+	align-items: stretch;
+
 	width: 100%;
 	height: 600px;
 	border-radius: 10px;
+
 	overflow: hidden;
+	transition: 300ms;
+}
+
+.marker_info_container {
+	flex-basis: 0;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	min-width: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--color-10);
+
+	transition: 300ms;
+}
+
+.marker_info_container>.info_title {
+	padding: 10px;
+	display: flex;
+	align-items: center;
+	align-self: baseline;
+	width: 100%;
+}
+
+.marker_info_container>.info_title>.info_username {
+	flex-basis: calc(80% - 20px);
+
+	font-size: 20px;
+	text-align: center;
+	letter-spacing: -0.2px;
+	color: darkslategray;
+}
+
+.marker_info_container>.info_title>.back_btn {
+	flex-basis: 10%;
+
+	width: 38px;
+	height: 38px;
+	color: var(--color-40);
+
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.marker_info_container>.info_title>.back_btn:hover {
+	transform: rotate(360deg);
+	color: var(--color-80);
+}
+
+.marker_info_container>.info_title>.like_btn {
+	flex-basis: 10%;
+
+	width: 38px;
+	height: 38px;
+
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.marker_info_container>.info_title>.like_btn:hover {
+	animation: like_animation 800ms linear infinite;
+}
+
+@keyframes like_animation {
+	50% {
+		transform: scale(1.2);
+	}
 }
