--- a/client/src/components/unit/lookup/marker/index.css
+++ b/client/src/components/unit/lookup/marker/index.css
@@ -7,7 +7,7 @@
 	width: 60px;
 	height: 60px;
 
-	background-color: var(--color-100);
+	background-color: var(--color-80);
 	border-radius: 50% 50% 50% 0;
 	cursor: pointer;
 }
@@ -23,6 +23,11 @@
 	border-radius: 50%;
 
 	transform: rotate(45deg);
+	transition: 300ms;
+}
+
+.marker_container>img:hover {
+	opacity: 0.7;
 }
 
 .marker_bounce {
@@ -56,7 +61,7 @@
 	opacity: 0;
 	border-radius: 50%;
 	box-shadow: 0 0 1px 2px var(--color-80);
-	
+
 	animation: pulsate 1000ms ease-out;
 	animation-iteration-count: infinite;
 	animation-delay: 1000ms;
