--- a/client/src/components/unit/setting/profile/index.css
+++ b/client/src/components/unit/setting/profile/index.css
@@ -1,4 +1,5 @@
 @media (min-width: 800px) {
+
 	.profile_setting_container>.section,
 	.profile_setting_container>.section_title,
 	.profile_setting_container>.section_wide {
@@ -7,6 +8,7 @@
 }
 
 @media (max-width: 799px) {
+
 	.profile_setting_container>.section,
 	.profile_setting_container>.section_title,
 	.profile_setting_container>.section_wide {
@@ -148,6 +150,7 @@
 
 .profile_setting_container>.section>.radio_container {
 	display: flex;
+	align-items: center;
 
 	width: 60%;
 	max-width: 220px;
@@ -158,6 +161,7 @@
 	width: 44%;
 }
 
+.radio_container>span,
 .radio_container>.radio_section>span {
 	margin: 0 2px;
 	min-width: 34px;
@@ -239,6 +243,50 @@
 	cursor: grabbing;
 	cursor: -webkit-grabbing;
 	transform: scale(1.03);
+}
+
+.section>.radio_container>input[type='range'] {
+	-webkit-appearance: none;
+
+	margin-right: 10px;
+	width: 140px;
+	height: 5px;
+
+	background-color: var(--color-20);
+	border-radius: 2.5px;
+	cursor: pointer;
+}
+
+.section>.radio_container>.custom_slider>.custom_thumb,
+.section>.radio_container>input[type='range']::-webkit-slider-thumb {
+	-webkit-appearance: none;
+
+	height: 14px;
+	width: 14px;
+
+	border-radius: 50%;
+	background-color: var(--color-80);
+
+	transition: 300ms;
+}
+
+.section>.radio_container>.custom_slider>.custom_thumb:hover,
+.section>.radio_container>input[type='range']::-webkit-slider-thumb:hover {
+	transform: scale(1.2);
+	background-color: var(--color-100);
+}
+
+.section>.radio_container>.custom_slider {
+	display: flex;
+	align-items: center;
+
+	margin: 2px 10px 2px 2px;
+	width: 140px;
+	height: 5px;
+
+	background-color: var(--color-20);
+	border-radius: 2.5px;
+	cursor: pointer;
 }
 
 @keyframes btn_animation {
