--- a/client/src/components/unit/home/index.css
+++ b/client/src/components/unit/home/index.css
@@ -6,14 +6,17 @@
 
 	margin: 0;
 	padding: 0;
-
 	width: 100%;
-	background: url('../../../assets/images/1.jpg') fixed center 100%;
+	
+	background-image: url('../../../assets/images/main.jpg');
+	background-repeat: no-repeat;
+	background-size: auto 100%;
+	background-position: center;
 
 	box-shadow: 0 0 4px var(--color-40);
 }
 
-.home_title {
+.home_main_img_container>.home_title {
 	margin: 20px 0;
 	color: aliceblue;
 
@@ -23,7 +26,7 @@
 	letter-spacing: 4px;
 }
 
-.home_description {
+.home_main_img_container>.home_description {
 	position: absolute;
 	right: 16px;
 	bottom: 12px;
@@ -34,7 +37,7 @@
 	color: darkslategray;
 }
 
-.home_account_btn {
+.home_main_img_container>.home_account_btn {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -54,6 +57,6 @@
 	transition: 500ms;
 }
 
-.home_account_btn:hover {
+.home_main_img_container>.home_account_btn:hover {
 	opacity: 0.5;
 }
