--- a/client/src/components/unit/setting/profile/index.css
+++ b/client/src/components/unit/setting/profile/index.css
@@ -245,14 +245,26 @@
 	transform: scale(1.03);
 }
 
-.profile_setting_container>.section_wide>.picture_container>img,
+.profile_setting_container>.section_wide>.picture_container>.picture_each,
 .profile_setting_container>.section_wide>.picture_container>.picture_add {
+	position: relative;
+
 	margin: 0 3px;
 	min-width: calc(50% - 6px);
+	max-width: calc(50% - 6px);
 	min-height: 140px;
+	max-height: 140px;
 
 	border-radius: 8px;
 	
+	overflow: hidden;
+	transition: 300ms;
+}
+
+.profile_setting_container>.section_wide>.picture_container>.picture_each>img {
+	width: 100%;
+	height: 100%;
+
 	transition: 300ms;
 }
 
@@ -278,10 +290,32 @@
 .profile_setting_container>.section_wide>.picture_container>.picture_add>.add_btn {
 	width: 40px;
 	height: 40px;
+
+	animation: btn_animation 800ms linear infinite;
 }
 
-.profile_setting_container>.section_wide>.picture_container>img:hover {
-	opacity: 0.7;
+.profile_setting_container>.section_wide>.picture_container>.picture_each:hover>img {
+	opacity: 0.4;
+}
+
+.profile_setting_container>.section_wide>.picture_container>.picture_each:hover>.delete_btn {
+	display: block;
+}
+
+.profile_setting_container>.section_wide>.picture_container>.picture_each>.delete_btn {
+	display: none;
+
+	position: absolute;
+	top: calc(50% - 20px);
+	left: calc(50% - 20px);
+
+	width: 40px;
+	height: 40px;
+
+	color: var(--color-100);
+
+	animation: btn_animation 800ms linear infinite;
+	transition: 300ms;
 }
 
 .section>.radio_container>input[type='range'] {
