--- a/client/src/components/util/pullUser/index.css
+++ b/client/src/components/util/pullUser/index.css
@@ -86,6 +86,7 @@
 }
 
 .pull_user_container>.info_title>.right_btn.for_lookup:hover {
+	color: var(--color-20);
 	animation: like_animation 800ms linear infinite;
 }
 
