--- a/client/src/components/unit/home/index.css
+++ b/client/src/components/unit/home/index.css
@@ -19,7 +19,7 @@
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	
+
 	background-image: url('../../../assets/images/main.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -70,5 +70,145 @@
 }
 
 .home_main_img_container>.home_account_btn:hover {
+	opacity: 0.5;
+}
+
+@media (min-width: 700px) {
+	.home_container {
+		padding: 40px 80px;
+		width: calc(100% - 160px);
+	}
+
+	.home_wrapper>.home_container>.home_footer>span,
+	.home_wrapper>.home_container>.home_footer>.terms>span {
+		color: darkslategray;
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 699px) {
+	.home_container {
+		padding: 30px;
+		width: calc(100% - 60px);
+	}
+
+	.home_wrapper>.home_container>.home_footer>span,
+	.home_wrapper>.home_container>.home_footer>.terms>span {
+		color: darkslategray;
+		font-size: 12px;
+	}
+}
+
+.home_wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.home_wrapper>.home_container {
+	display: flex;
+	flex-direction: column;
+
+	max-width: 800px;
+	height: auto;
+	min-height: 600px;
+
+
+	transition: 300ms;
+}
+
+.home_wrapper>.home_container>h3 {
+	align-self: center;
+
+	color: darkslategray;
+	font-size: 22px;
+	font-weight: 700;
+	line-height: 28px;
+}
+
+.home_wrapper>.home_container>.home_dash {
+	align-self: center;
+
+	margin: 24px 0;
+	width: 75px;
+	height: 4px;
+	background-color: var(--color-100);
+}
+
+.home_wrapper>.home_container>.home_rich_text>p {
+	display: block;
+	position: relative;
+	margin-bottom: 20px;
+
+	color: #666;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 26px;
+}
+
+.home_wrapper>.home_container>.home_rich_text>figure {
+	float: left;
+	display: table;
+	position: relative;
+
+	width: 40%;
+	z-index: -1;
+}
+
+.home_wrapper>.home_container>.home_rich_text>figure>img {
+	width: 100%;
+}
+
+.home_wrapper>.home_container>.home_section_divider {
+	align-self: center;
+
+	margin: 24px 0;
+	width: 100%;
+	height: 1px;
+	background-color: var(--color-100);
+}
+
+.home_wrapper>.home_container>.home_get_app {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: auto;
+}
+
+.home_wrapper>.home_container>.home_get_app>span {
+	width: 170px;
+	color: darkslategray;
+	font-size: 22px;
+	font-weight: 700;
+}
+
+.home_wrapper>.home_container>.home_get_app>img {
+	width: 140px;
+	margin: 0 12px;
+
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.home_wrapper>.home_container>.home_get_app>img:hover {
+	opacity: 0.6;
+}
+
+.home_wrapper>.home_container>.home_footer {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	width: 100%;
+
+	transition: 300ms;
+}
+
+.home_wrapper>.home_container>.home_footer>.terms>span.span_hover {
+	cursor: pointer;
+	transition: 300ms;
+}
+
+.home_wrapper>.home_container>.home_footer>.terms>span.span_hover:hover {
 	opacity: 0.5;
 }
