--- a/client/src/components/unit/overview/index.css
+++ b/client/src/components/unit/overview/index.css
@@ -71,10 +71,19 @@
 	padding: 0;
 
 	color: darkslategray;
-	font-size: 17px;
 	font-weight: 400;
-	line-height: 24px;
 	letter-spacing: -0.4px;
+}
+
+.overview_container>.overview_each>.log_content>h4 {
+	font-size: 13.4px;
+	line-height: 22px;
+}
+
+.overview_container>.overview_each>.overview_content>h4 {
+	font-size: 16px;
+	line-height: 24px;
+
 }
 
 .overview_container>.overview_each>.overview_content>.overview_user {
@@ -83,13 +92,15 @@
 	align-items: center;
 	justify-content: center;
 
-	width: 80px;
+	min-width: 80px;
 	height: 98px;
 }
 
 .overview_container>.overview_each>.overview_content>.overview_user>img {
-	width: 76px;
-	height: 76px;
+	min-width: 76px;
+	max-width: 76px;
+	min-height: 76px;
+	max-height: 76px;
 
 	border: 2px solid var(--color-100);
 	border-radius: 50%;
